--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     password: ${DB_PASSWORD:postgres}
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: validate
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
@@ -21,6 +21,11 @@ spring:
       auth: true
       starttls:
         enable: true
+  flyway:
+    enabled: true
+    user: postgres
+    password: postgres
+    baseline-on-migrate: true
 
 
 ai-chat:
